BREAKING CHANGES fix(shiori) fix postgres sidecar (#6167)
* feat(shiori) fix postgres sidecar

* Update charts/stable/shiori/templates/_secret.tpl

Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Signed-off-by: Xstar97 <Xstar97@users.noreply.github.com>

* Update charts/stable/shiori/templates/_secret.tpl

Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Signed-off-by: Xstar97 <Xstar97@users.noreply.github.com>

* Update charts/stable/shiori/values.yaml

Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Signed-off-by: Xstar97 <Xstar97@users.noreply.github.com>

* Update charts/stable/shiori/values.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* fix envFrom

* remove defaults

* set mirror container

Signed-off-by: Xstar97 <Xstar97@users.noreply.github.com>
Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/charts/stable/shiori/values.yaml
+++ b/charts/stable/shiori/values.yaml
@@ -1,27 +1,11 @@
 image:
   repository: tccr.io/truecharts/shiori
   pullPolicy: IfNotPresent
-  tag: version-v1.5.0@sha256:6c6331888c9a5162def49b6212327242f7f5c96e2d5a1bb031f79321cc1c0549
+  tag: 1.5.3@sha256:99696bfc727ab1792297cba1e0ba755953bc0cfa38f2c19532c56d68985479a8
 
-securityContext:
-  allowPrivilegeEscalation: true
-  runAsNonRoot: false
-
-podSecurityContext:
-  runAsUser: 0
-  runAsGroup: 0
-
-env:
-  SHIORI_PG_NAME: "{{ .Values.postgresql.postgresqlDatabase }}"
-  SHIORI_PG_USER: "{{ .Values.postgresql.postgresqlUsername }}"
-  SHIORI_PG_PASS:
-    secretKeyRef:
-      name: dbcreds
-      key: postgresql-password
-  SHIORI_PG_HOST:
-    secretKeyRef:
-      name: dbcreds
-      key: plainhost
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 service:
   main:
@@ -33,13 +17,13 @@ service:
 persistence:
   data:
     enabled: true
-    mountPath: "/data"
+    mountPath: /data
   varrun:
     enabled: true
 
 postgresql:
   enabled: true
-  existingSecret: "dbcreds"
+  existingSecret: dbcreds
   postgresqlUsername: shiori
   postgresqlDatabase: shiori
 
