--- a/charts/incubator/plexanisync/values.yaml
+++ b/charts/incubator/plexanisync/values.yaml
@@ -4,17 +4,30 @@ image:
   tag: latest@sha256:783613decc1a1041affe73ad90d04c3604b95824c156e0380c1a403bbe24ae3b
 
 plexanisync:
-  plex_url: plex_url
-  plex_token: plex_token
-  plex_section:
-    - section1
-    - section2
-  ani_username: ani_user
-  ani_token: ani_token
-  plex_ep_count_priority: false
-  skip_list_update: false
-  log_failed_matches: false
   interval: 3600
+  plex:
+    # direct | myplex
+    plex_auth_method: direct
+    # myplex
+    myplex_server: ""
+    myplex_user: ""
+    myplex_token: ""
+    # direct
+    plex_url: ""
+    plex_token: ""
+    plex_section: []
+      # - section1
+      # - section2
+    # Home user sync
+    home_user_sync: false
+    home_username: ""
+    home_server_url: ""
+  anilist:
+    ani_username: ""
+    ani_token: ""
+    plex_ep_count_priority: false
+    skip_list_update: false
+    log_failed_matches: false
 
 envFrom:
   - secretRef:
@@ -39,6 +52,14 @@ persistence:
   config:
     enabled: true
     mountPath: /plexanisync
+  settings:
+    enabled: true
+    type: secret
+    readOnly: true
+    defaultMode: "0600"
+    objectName: '{{ include "tc.common.names.fullname" . }}-config-secret'
+    mountPath: /plexanisync/settings.ini
+    subPath: settings.ini
 
 portal:
   enabled: false
