--- a/charts/incubator/plexanisync/values.yaml
+++ b/charts/incubator/plexanisync/values.yaml
@@ -29,6 +29,18 @@ plexanisync:
     skip_list_update: false
     log_failed_matches: false
 
+custom-mappings: []
+
+  # remote_urls:
+  #   - https://blabal
+  # entries:
+  #   - title: title
+  #     seasons:
+  #       - season: 1
+  #         anilist_id: 2345
+  #     synonyms:
+  #       - asfdasd
+
 envFrom:
   - secretRef:
       name: '{{ include "tc.common.names.fullname" . }}-secret'
@@ -60,6 +72,14 @@ persistence:
     objectName: '{{ include "tc.common.names.fullname" . }}-config-secret'
     mountPath: /plexanisync/settings.ini
     subPath: settings.ini
+  custom-mappings:
+    enabled: true
+    type: secret
+    readOnly: true
+    defaultMode: "0600"
+    objectName: '{{ include "tc.common.names.fullname" . }}-config-secret'
+    mountPath: /plexanisync/custom_mappings.yaml
+    subPath: custom_mappings.yaml
 
 portal:
   enabled: false
