--- a/charts/incubator/qwantify/questions.yaml
+++ b/charts/incubator/qwantify/questions.yaml
@@ -89,7 +89,7 @@ questions:
                 label: ReadOnly Root Filesystem
                 schema:
                   type: boolean
-                  default: true
+                  default: false
               - variable: allowPrivilegeEscalation
                 label: Allow Privilege Escalation
                 schema:
@@ -99,20 +99,20 @@ questions:
                 label: runAsNonRoot
                 schema:
                   type: boolean
-                  default: true
+                  default: false
 # Include{podSecurityContextRoot}
         - variable: runAsUser
           label: runAsUser
           description: The UserID of the user running the application
           schema:
             type: int
-            default: 568
+            default: 0
         - variable: runAsGroup
           label: runAsGroup
           description: The groupID this App of the user running the application
           schema:
             type: int
-            default: 568
+            default: 0
         - variable: fsGroup
           label: fsGroup
           description: The group that should own ALL storage.
