--- a/charts/incubator/openbooks/questions.yaml
+++ b/charts/incubator/openbooks/questions.yaml
@@ -51,9 +51,9 @@ questions:
 # Include{serviceExpert}
 # Include{serviceList}
 # Include{persistenceRoot}
-        - variable: config
-          label: App Config Storage
-          description: Stores the Application Configuration.
+        - variable: books
+          label: App Books Storage
+          description: Stores the Application Books.
           schema:
             additional_attrs: true
             type: dict
