--- a/charts/incubator/qwantify/values.yaml
+++ b/charts/incubator/qwantify/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/wanjohiryan/qwantify
+  repository: tccr.io/truecharts/qwantify
   pullPolicy: IfNotPresent
-  tag: 20.04@sha256:3d7b9ecfee074ee8836f4e4f7a3d674af7f34763f9dacce6b653c072508d6645
+  tag: 20.04.0@sha256:39017de5825e75652f09a14824caddee16e83614a8be79b1f517915dd7f1557c
 
 env:
   APPPATH: "/games"
