fix variable type

--- a/charts/incubator/openbooks/questions.yaml
+++ b/charts/incubator/openbooks/questions.yaml
@@ -38,7 +38,7 @@ questions:
           label: Search
           description: The IRC search operator to use.
           schema:
-            type: string
+            type: boolean
             default: false
             enum:
               - value: search
