--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -2,16 +2,20 @@ name: Common Library Tests
 
 on:
   pull_request:
-    # paths:
-    #   - library/**
-    #   - .github/workflows/common_tests.yaml
+    paths:
+      - library/**
+      - .github/workflows/common_library_tests.yaml
 
 jobs:
   lint:
     name: Lint Common
     runs-on: ubuntu-22.04
-    outputs:
-      changed: ${{ steps.list-changed.outputs.changed }}
+    strategy:
+      fail-fast: false
+      matrix:
+        helm-version:
+          - v3.9.4
+          - v3.10.3
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -21,7 +25,7 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@5119fcb9089d432beecbf79bb2c7915207344b78 # tag=v3
         with:
-          version: v3.10.3
+          version: ${{ matrix.helm-version }}
 
       - uses: actions/setup-python@2c3dd9e7e29afd70cc0950079bde6c979d1f69f9 # tag=v4
         with:
@@ -30,23 +34,12 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@afea100a513515fbd68b0e72a7bb0ae34cb62aec # tag=v2.3.1
 
-      - name: Gather changed charts
-        id: list-changed
-        run: |
-          changed=$(ct list-changed --config .github/ct-install-config/ct-lint.yaml)
-          if [[ -n "$changed" ]]; then
-            echo "changes_detected=true" >> $GITHUB_OUTPUT
-            echo "changed_charts=$changed" >> $GITHUB_OUTPUT
-          fi
-          echo "Changed Charts: $changed"
-
       - name: Run chart-testing (lint)
         id: lint
-        if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
         run: |
           ct lint --config .github/ct-install-config/ct-lint.yaml \
                   --lint-conf .github/ct-install-config/lint-conf.yaml \
-                  --charts "${{ steps.list-changed.outputs.changed_charts }}" \
+                  --charts library/common-test \
                   --debug
 
   unittest:
@@ -54,6 +47,12 @@ jobs:
       - lint
     name: Unit Tests
     runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        helm-version:
+          - v3.9.4
+          - v3.10.3
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -63,7 +62,7 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
         with:
-          version: v3.10.3
+          version: ${{ matrix.helm-version }}
 
       - name: Run tests
         run: |
@@ -71,6 +70,7 @@ jobs:
           x=$retries
           while [ $x -gt 0 ];
           do
+            # If it succeeds set it to 1 and the next command will make it zero and exit the loop
             helm plugin install https://github.com/quintush/helm-unittest --version v0.2.11 && x=1
             x=$(($x-1))
           done
@@ -86,10 +86,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # We can run a matrix test on current k3s version, on nigthlies version and on "latest"
+        # We run tests on k3s version of latest SCALE release, SCALE nightly and manually defined "latest"
         k3s-version:
           - v1.25.3+k3s1
           - v1.26.0+k3s1
+        # We run tests on Helm version of latest SCALE release, SCALE nightly and manually defined "latest"
+        helm-version:
+          - v3.9.4
+          - v3.10.3
+
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -99,7 +104,7 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
         with:
-          version: v3.10.3
+          version: ${{ matrix.helm-version }}
 
       - uses: actions/setup-python@2c3dd9e7e29afd70cc0950079bde6c979d1f69f9 # tag=v4
         with:
@@ -108,18 +113,7 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@afea100a513515fbd68b0e72a7bb0ae34cb62aec # tag=v2.3.1
 
-      - name: Gather changed charts
-        id: list-changed
-        run: |
-          changed=$(ct list-changed --config .github/ct-install-config/ct-install.yaml)
-          if [[ -n "$changed" ]]; then
-            echo "changes_detected=true" >> $GITHUB_OUTPUT
-            echo "changed_charts=$changed" >> $GITHUB_OUTPUT
-          fi
-          echo "Changed Charts: $changed"
-
       - name: Create k3d cluster
-        if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
         uses: nolar/setup-k3d-k3s@293b8e5822a20bc0d5bcdd4826f1a665e72aba96 # tag=v1.0.9
         with:
           version: ${{ matrix.k3s-version }}
@@ -127,9 +121,7 @@ jobs:
           k3d-args: --k3s-arg --disable=metrics-server@server:*
 
       - name: Run chart-testing (install)
-        if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
         run: |
           ct install  --config .github/ct-install-config/ct-install.yaml \
-                      --charts "${{ steps.list-changed.outputs.changed_charts }}" \
-                      --upgrade \
+                      --charts library/common-test \
                       --debug
