--- a/charts/incubator/plexanisync/values.yaml
+++ b/charts/incubator/plexanisync/values.yaml
@@ -30,7 +30,7 @@ plexanisync:
     skip_list_update: false
     log_failed_matches: false
 
-custom-mappings:
+custom_mappings:
   []
   # remote_urls:
   #   - https://blabal
