--- a/charts/stable/qbittorrent/questions.yaml
+++ b/charts/stable/qbittorrent/questions.yaml
@@ -33,7 +33,7 @@ questions:
                               default: 10095
                               required: true
         - variable: torrent
-          label: "TCP Torrent Service"
+          label: "Torrent Service"
           description: "Torrent service"
           schema:
             additional_attrs: true
@@ -54,15 +54,6 @@ questions:
                               type: int
                               default: 6881
                               required: true
-        - variable: torrentudp
-          label: "UDP Torrent Service"
-          description: "Torrent service"
-          schema:
-            additional_attrs: true
-            type: dict
-            attrs:
-# Include{serviceSelectorLoadBalancer}
-# Include{serviceSelectorExtras}
                     - variable: torrentudp
                       label: "UDP Service Port Configuration"
                       schema:
