--- a/.github/workflows/charts-test.yaml
+++ b/.github/workflows/charts-test.yaml
@@ -387,28 +387,51 @@ jobs:
       - name: Run chart-testing (install)
         run: ct install --config ".github/ct-install.yaml" --charts "${{ matrix.chart }}" --upgrade
 
-  # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
-  install_success:
-    needs:
-      - generate-install-matrix
-      - install-charts1
-      - install-charts2
-      - install-charts3
-      - install-charts4
-      - install-charts5
-      - install-charts6
-    #if: |
-    #  always()
-    name: Install successful
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check install matrix status
-        # if: ${{ ( (needs.generate-install-matrix.outputs.detected1 == 'true') && (needs.install-charts1.result != 'success') ) && ( (needs.generate-install-matrix.outputs.detected2 == 'true') && ( (needs.install-charts2.result != 'success') || ( needs.install-charts2.result != 'skipped' ) ) ) && ( (needs.generate-install-matrix.outputs.detected3 == 'true') && ( (needs.install-charts3.result != 'success') || ( needs.install-charts3.result != 'skipped' ) ) ) && ( (needs.generate-install-matrix.outputs.detected4 == 'true') && ( (needs.install-charts4.result != 'success') || ( needs.install-charts4.result != 'skipped' ) ) ) && ( (needs.generate-install-matrix.outputs.detected5 == 'true') && ( (needs.install-charts5.result != 'success') || ( needs.install-charts5.result != 'skipped' ) ) ) && ( (needs.generate-install-matrix.outputs.detected6 == 'true') && ( (needs.install-charts6.result != 'success') || ( needs.install-charts6.result != 'skipped' ) ) ) }}
-        run: exit 0
-
-      - uses: vishnudxb/cancel-workflow@c3c77eb4383ba7d023e6614a07d94fe990501ac6 # tag=v1.2
-        if: failure()
-        with:
-          repo: truecharts/charts
-          workflow_id: ${{ github.run_id }}
-          access_token: ${{ github.token }}
+          res1="${{needs.install-charts1.result}}"
+          res2="${{needs.install-charts2.result}}"
+          res3="${{needs.install-charts3.result}}"
+          res4="${{needs.install-charts4.result}}"
+          res5="${{needs.install-charts5.result}}"
+          res6="${{needs.install-charts6.result}}"
+          
+          if [[ $res1 == "success" || $res1 == "skipped" ]]; then
+            echo "install tests 1 successfull..."
+          else
+            echo "install tests 1 error, stopping due to failure..."
+            exit 1
+          fi
+          
+          if [[ $res2 == "success" || $res2 == "skipped" ]]; then
+            echo "install tests 2 successfull..."
+          else
+            echo "install tests 2 error, stopping due to failure..."
+            exit 1
+          fi
+          
+          if [[ $res3 == "success" || $res3 == "skipped" ]]; then
+            echo "install tests 3 successfull..."
+          else
+            echo "install tests 3 error, stopping due to failure..."
+            exit 1
+          fi
+          
+          if [[ $res4 == "success" || $res4 == "skipped" ]]; then
+            echo "install tests 4 successfull..."
+          else
+            echo "install tests 4 error, stopping due to failure..."
+            exit 1
+          fi
+          
+          if [[ $res5 == "success" || $res5 == "skipped" ]]; then
+            echo "install tests 5 successfull..."
+          else
+            echo "install tests 5 error, stopping due to failure..."
+            exit 1
+          fi
+          
+          if [[ $res6 == "success" || $res6 == "skipped" ]]; then
+            echo "install tests 6 successfull..."
+          else
+            echo "install tests 6 error, stopping due to failure..."
+            exit 1
+          fi
