--- a/.github/workflows/charts-test.yaml
+++ b/.github/workflows/charts-test.yaml
@@ -387,6 +387,22 @@ jobs:
       - name: Run chart-testing (install)
         run: ct install --config ".github/ct-install.yaml" --charts "${{ matrix.chart }}" --upgrade
 
+  # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
+  install_success:
+    needs:
+      - generate-install-matrix
+      - install-charts1
+      - install-charts2
+      - install-charts3
+      - install-charts4
+      - install-charts5
+      - install-charts6
+    if: ${{ always() }}
+    name: Install successful
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check install matrix status
+        run: |
           res1="${{needs.install-charts1.result}}"
           res2="${{needs.install-charts2.result}}"
           res3="${{needs.install-charts3.result}}"
