--- a/charts/stable/transmission/templates/common.yaml
+++ b/charts/stable/transmission/templates/common.yaml
@@ -1,2 +1,8 @@
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{/* Set it to the same port as "torrent" service/port */}}
+{{- $_ := set $.Values.service.torrent.ports.torrentudp "port" (int .Values.service.torrent.ports.torrent.port) -}}
+
 {{/* Render the templates */}}
-{{ include "tc.common.loader.all" . }}
+{{ include "tc.common.loader.apply" . }}
