--- a/charts/stable/kitchenowl/Chart.yaml
+++ b/charts/stable/kitchenowl/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: "beta"
+appVersion: "latest"
 dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
@@ -22,7 +22,7 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/kitchenowl
   - https://tombursch.github.io/kitchenowl
 type: application
-version: 3.0.12
+version: 4.0.0
 annotations:
   truecharts.org/catagories: |
     - utilities
