--- a/charts/incubator/plexanisync/values.yaml
+++ b/charts/incubator/plexanisync/values.yaml
@@ -31,16 +31,16 @@ plexanisync:
     log_failed_matches: false
 
 custom_mappings:
-  # []
-  remote_urls:
-    - https://blabal
-  entries:
-    - title: title
-      seasons:
-        - season: 1
-          anilist_id: 2345
-      synonyms:
-        - asfdasd
+  []
+  # remote_urls:
+  #   - https://blabal
+  # entries:
+  #   - title: title
+  #     seasons:
+  #       - season: 1
+  #         anilist_id: 2345
+  #     synonyms:
+  #       - asfdasd
 
 envFrom:
   - secretRef:
