--- a/charts/incubator/plexanisync/values.yaml
+++ b/charts/incubator/plexanisync/values.yaml
@@ -2,7 +2,8 @@ image:
   repository: tccr.io/truecharts/plexanisync
   pullPolicy: IfNotPresent
   tag: latest@sha256:783613decc1a1041affe73ad90d04c3604b95824c156e0380c1a403bbe24ae3b
-
+securityContext:
+  readOnlyRootFilesystem: false
 plexanisync:
   interval: 3600
   plex:
