--- a/charts/incubator/plexanisync/templates/common.yaml
+++ b/charts/incubator/plexanisync/templates/common.yaml
@@ -4,5 +4,19 @@
 {{/* Render secret */}}
 {{- include "plexanisync.secret" . }}
 
+{{- define "plexanisync.custom.mappings" -}}
+enabled: true
+type: secret
+readOnly: true
+defaultMode: "0600"
+objectName: '{{ include "tc.common.names.fullname" . }}-config-secret'
+mountPath: /plexanisync/custom_mappings.yaml
+subPath: custom_mappings.yaml
+{{- end -}}
+
+{{- if .Values.custom_mappings -}}
+  {{- $_ := set .Values.persistence "custommappings" (include "plexanisync.custom.mappings" | fromYaml) -}}
+{{- end -}}
+
 {{/* Render the templates */}}
 {{ include "tc.common.loader.apply" . }}
