--- a/charts/incubator/plexanisync/values.yaml
+++ b/charts/incubator/plexanisync/values.yaml
@@ -39,16 +39,15 @@ plexanisync:
     log_failed_matches: false
 
 custom_mappings:
-  []
-  # remote_urls:
-  #   - https://blabal
-  # entries:
-  #   - title: title
-  #     seasons:
-  #       - season: 1
-  #         anilist_id: 2345
-  #     synonyms:
-  #       - asfdasd
+  remote_urls:
+    - https://blabal
+  entries:
+    - title: title
+      seasons:
+        - season: 1
+          anilist_id: 2345
+      synonyms:
+        - asfdasd
 
 envFrom:
   - secretRef:
@@ -78,14 +77,7 @@ persistence:
     objectName: '{{ include "tc.common.names.fullname" . }}-config-secret'
     mountPath: /plexanisync/settings.ini
     subPath: settings.ini
-  custom-mappings:
-    enabled: true
-    type: secret
-    readOnly: true
-    defaultMode: "0600"
-    objectName: '{{ include "tc.common.names.fullname" . }}-config-secret'
-    mountPath: /plexanisync/custom_mappings.yaml
-    subPath: custom_mappings.yaml
+
 
 portal:
   enabled: false
